--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,6 +10,9 @@ $background: #000620;
 $identity: #e87d9e;
 $gray1: #9ea0a4;
 
+$html: #e54d26;
+
+
 /*=================폰트패밀리=================*/
 // $bighead: 'Pacifico';
 $common: 'ImcreSoojin';
